--- a/client/stylesheets/room.css
+++ b/client/stylesheets/room.css
@@ -1,4 +1,3 @@
-@import "room-share.css";
 #style-btn{
     position: fixed;
     top: 1%;
@@ -171,9 +170,6 @@
     border: none;
 }
 
-.modify_alert{
-    z-index: 999;
-}
 
 #background-upload-control{
     margin-left:auto;
@@ -187,6 +183,10 @@
 
 #background-upload-progress-bar-div{
     margin-top: 1em;
+}
+
+#background-upload-progress-bar{
+    transition: 0.25s width;
 }
 
 #current-avatar-div{
@@ -238,4 +238,8 @@
     font-size: 0.75em;
     margin-top: 0.5em;
     transition: 0.25s background-color;
+}
+
+.tooltip-inner{
+    text-align: left;
 }
